inline styles to format page worried it's wuruwuru lol

--- a/Sales Order Page.html
+++ b/Sales Order Page.html
@@ -3,135 +3,149 @@
 </head>
 
 <body>
-    <h1 id="header">Sales Order</h1>
+    <span style="font-family: Arial, Helvetica, sans-serif;">
+        <div id="container">
+            <div id="center-div">
+                <h1 id="soheader">Sales Order</h1>
 
-    <div id="bodydiv">
-        <table>
-            <thead>
-                <tr>
-                    <th colspan="2">
-                        Bill To
-                    </th>
-                    <th colspan="2">
-                        Ship To
-                    </th>
-                </tr>
-            </thead>
+                <div id="tablediv">
+                    <table>
+                        <thead>
+                            <div>
+                                <tr>
+                                    <th colspan="2">
+                                        Bill To
+                                    </th>
+                                    <th colspan="2">
+                                        Ship To
+                                    </th>
+                                </tr>
+                            </div>
+                        </thead>
 
-            <tbody>
+                        <tbody>
 
-                <tr>
-                    <td colspan="2">
-                        <div>City Theatrical, Inc.</div>
-                        <div>475 Barell Avenue</div>
-                        <div>Carlstadt, NJ 07072</div>
-                    </td>
+                            <tr>
+                                <td style="width: 200px; padding: 5px;" colspan="2">
+                                    <div>City Theatrical, Inc.</div>
+                                    <div>475 Barell Avenue</div>
+                                    <div>Carlstadt, NJ 07072</div>
+                                </td>
 
-                    <td colspan="2">
-                        <div>Yusuf Hadiza</div>
-                        <div>08124858574</div>
-                        <div>yusuf@hadiza.com</div>
-                    </td>
-                </tr>
-        </table>
+                                <td style="width: 200px;" colspan="2">
+                                    <div>Yusuf Hadiza</div>
+                                    <div>08124858574</div>
+                                    <div>yusuf@hadiza.com</div>
+                                </td>
+                            </tr>
+                    </table>
 
-        <br />
+                    <br />
 
-        <table>
-            <tr>
-                <td>Quote Number:</td>
-                <td>SAL-QTN-2020-00005</td>
-                <td>Delivery</td>
-                <td>xxxxxx</td>
-            </tr>
+                    <table>
+                        <div>
+                            <tr>
+                                <td style="width: 200px; border-right: 0px; padding: 5px;">Quote Number:</td>
+                                <td style="width: 200px;">SAL-QTN-2020-00005</td>
+                                <td style="width: 200px; border-right: 0px; padding: 5px;">Delivery</td>
+                                <td style="width: 200px;">xxxxxx</td>
+                            </tr>
 
-            <tr>
-                <td>Quote Date:</td>
-                <td>02-18-2020</td>
-                <td>Ship Method:</td>
-                <td>UPS Ground Collect</td>
-            </tr>
+                            <tr>
+                                <td style="border-right: 0px; padding: 5px;">Quote Date:</td>
+                                <td>02-18-2020</td>
+                                <td style="border-right: 0px; padding: 5px;">Ship Method:</td>
+                                <td>UPS Ground Collect</td>
+                            </tr>
 
-            <tr>
-                <td>Quote Valid Until</td>
-                <td>03-19-2020</td>
-                <td>Incoterms</td>
-                <td>DAT</td>
-            </tr>
+                            <tr>
+                                <td style="border-right: 0px; padding: 5px;">Quote Valid Until</td>
+                                <td>03-19-2020</td>
+                                <td style="border-right: 0px; padding: 5px;">Incoterms</td>
+                                <td>DAT</td>
+                            </tr>
 
-            <tr>
-                <td>Sales Rep</td>
-                <td>Kristina Franklin</td>
-                <td>Payment Terms</td>
-                <td>Net 30 days</td>
-            </tr>
-        </table>
+                            <tr>
+                                <td style="border-right: 0px; padding: 5px;">Sales Rep</td>
+                                <td>Kristina Franklin</td>
+                                <td style="border-right: 0px; padding: 5px;">Payment Terms</td>
+                                <td>Net 30 days</td>
+                            </tr>
+                        </div>
+                    </table>
 
-        <br />
+                    <br />
 
-        <table>
-            <tr>
-                <td>Ll#</td>
-                <td>Quantity</td>
-                <td>Part Number</td>
-                <td>Description</td>
-                <td>Unit Price</td>
-                <td>Extended Price</td>
-            </tr>
+                    <table>
+                        <tr style="background-color: #eeeeee;">
+                            <td style="width: 40px; padding: 5px;">Ll#</td>
+                            <td style="width: 80px;">Quantity</td>
+                            <td style="width: 250px;">Part Number</td>
+                            <td style="width: 200px;">Description</td>
+                            <td style="width: 150px;">Unit Price</td>
+                            <td style="width: 150px;">Extended Price</td>
+                        </tr>
 
-            <tr>
-                <div>
-                    <td>1</td>
-                    <td>1.00</td>
-                    <td>TGM-280NSRL</td>
-                    <td>Items for SM Tape & Reel</td>
-                    <td>$600.0000</td>
-                    <td>$600.00</td>
+                        <tr>
+                            <div>
+                                <td style="padding: 5px;">1</td>
+                                <td>1.00</td>
+                                <td>TGM-280NSRL</td>
+                                <td>Items for SM Tape & Reel</td>
+                                <td>$600.0000</td>
+                                <td>$600.00</td>
+                            </div>
+                        </tr>
+
+                        <tr>
+                            <div>
+                                <td style="padding: 5px;"></td>
+                                <td>1.00</td>
+                                <td>TGM-280NSRL</td>
+                                <td>Specified Reel Quantity - Additional Reels Required</td>
+                                <td>$1,000.0000</td>
+                                <td>$1000.00</td>
+                            </div>
+                        </tr>
+                    </table>
+
+                    <br />
+
+                    <table>
+                        <tr>
+                            <td colspan="3" rowspan="4" style="vertical-align: top; padding: 5px; font-weight: bold; width: 500px;">
+                                Notes or Special Instructions</td>
+                            <td style="padding: 5px; width: 141px;">Subtotal:</td>
+                            <td style="width: 150px;">$1,600.00</td>
+                        </tr>
+
+                        <tr>
+
+                            <td style="padding: 5px;">Freight:</td>
+                            <td>$500.00</td>
+                        </tr>
+
+                        <tr>
+
+                            <td style="padding: 5px;">Handling:</td>
+                            <td>$499.00</td>
+                        </tr>
+
+                        <tr>
+
+                            <td style="padding: 5px;">Order Total:</td>
+                            <td>$2,599.00</td>
+                        </tr>
+
+                        </tbody>
+
+                    </table>
                 </div>
-            </tr>
 
-            <tr>
-                <div>
-                    <td></td>
-                    <td>1.00</td>
-                    <td>TGM-280NSRL</td>
-                    <td>Specified Reel Quantity - Additional Reels Required</td>
-                    <td>$1,000.0000</td>
-                    <td>$1000.00</td>
-                </div>
-            </tr>
-        </table>
-
-        <br />
-
-        <table>
-            <tr>
-                <td colspan="3">Notes or Special Instructions</td>
-                <td>Subtotal:</td>
-                <td>$1,600.00</td>
-            </tr>
-
-            <tr>
-                <td colspan="3"></td>
-                <td>Freight:</td>
-                <td>$500.00</td>
-            </tr>
-
-            <tr>
-                <td colspan="3"></td>
-                <td>Handling:</td>
-                <td>$499.00</td>
-            </tr>
-
-            <tr>
-                <td colspan="3"></td>
-                <td>Order Total:</td>
-                <td>$2,599.00</td>
-            </tr>
-
-            </tbody>
-
-        </table>
-
-    </div>
+                <p>This quote is subject to change upon reciept and evaluation of the items being quoted.<br />
+                    Thank you for the opportunity to offer this quote and please do not hesitate to contact me with any
+                    questions you may have.</p>
+            </div>
+        </div>
+    </span>
 </body>
